feat: trocando threads normais por virtual threads